--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,6 +5,9 @@ on:
         branches:
             - master
             # note that your "main" branch might be called main instead of master
+    pull_request:
+        branches: [master]
+        types: [opened, synchronize]
 
 jobs:
     simple_deployment_pipeline:
@@ -39,3 +42,14 @@ jobs:
                   healthcheck: 'https://heroku-pokedex-app.herokuapp.com/health'
                   checkstring: 'ok'
                   rollbackonhealthcheckfailed: true
+
+    tag_release:
+        needs: [simple_deployment_pipeline]
+        runs-on: ubuntu-20.04
+        steps: 
+        - name: Bump version and push tag
+              if: ${{ github.event_name == 'pull' }}
+              uses: anothrNick/github-tag-action@1.36.0
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              DRY_RUN: true
