--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,3 +51,4 @@ jobs:
               uses: anothrNick/github-tag-action@1.36.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              DRY_RUN: true
