--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,6 +50,7 @@ jobs:
               with:
                   fetch-depth: '0'
             - name: Bump version and push tag
+              if: ${{ github.event_name == 'pull' }}
               uses: anothrNick/github-tag-action@1.36.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
