--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - master
-    pull_request:
+    pull:
         branches: [master]
         types: [opened, synchronize]
 
