--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,6 +50,7 @@ jobs:
               if: ${{ github.event_name == 'push' }}
               uses: anothrNick/github-tag-action@1.36.0
               env:
-                  DRY_RUN: true
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  INITIAL_VERSION: 0.1.0
                   DEFAULT_BUMP: patch
+                  DRY_RUN: true
