--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,9 +46,12 @@ jobs:
         needs: [simple_deployment_pipeline]
         runs-on: ubuntu-20.04
         steps:
+            - uses: actions/checkout@v3
+              with:
+                  fetch-depth: '0'
             - name: Bump version and push tag
               if: ${{ github.event_name == 'push' }}
-              uses: anothrNick/github-tag-action@1.36.0
+              uses: anothrNick/github-tag-action@1.55.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   INITIAL_VERSION: 0.1.0
