--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,13 @@ jobs:
             - name: lint
               run: npm run eslint
             - name: build
-              run: npm run build
+              command: npm run build
+              uses: rjstone/discord-webhook-notify@v1.0.4
+              if: failure()
+              with:
+                  severity: error
+                  details: build Failed!
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
             - name: test
               run: npm run test
             - name: e2e tests
