--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,10 +21,10 @@ jobs:
             - name: lint
               run: npm run eslint
             - name: build
+              run: npm run build
               uses: rjstone/discord-webhook-notify@v1.0.4
               if: failure()
               with:
-                  command: npm run build
                   severity: error
                   details: build Failed!
                   webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
