--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
             - name: lint
               run: npm run eslint
             - name: build
-              run: npm run build
+              command: npm run build
               uses: rjstone/discord-webhook-notify@v1.0.4
               if: failure()
               with:
