--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,15 +22,8 @@ jobs:
               run: npm run eslint
             - name: build
               run: npm run build
-            - name: Test Success
-              uses: rjstone/discord-webhook-notify@v1
-              if: success()
-              with:
-                  severity: info
-                  details: Test Succeeded!
-                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
             - name: build failed
-              uses: rjstone/discord-webhook-notify@v1.0.4
+              uses: rjstone/discord-webhook-notify@v1
               if: failure()
               with:
                   severity: error
@@ -66,3 +59,10 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   DEFAULT_BUMP: patch
+
+            - name: version success
+              if success()
+              with:
+                  severity: error
+                  details: version deploy succeeded!
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
