--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -6,12 +6,11 @@ on:
             - master
 
 jobs:
-    health check:
+    health_check:
         runs-on: ubuntu-latest
         uses: jtalk/url-health-check-action@v3
         with:
             url: https://heroku-pokedex-app.herokuapp.com/
-            follow-redirect: false
             max-atempts: 3
             retry-delay: 5s
             retry-all: false
