--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -8,9 +8,11 @@ on:
 jobs:
     health_check:
         runs-on: ubuntu-latest
-        uses: jtalk/url-health-check-action@v3
-        with:
-            url: https://heroku-pokedex-app.herokuapp.com/
-            max-atempts: 3
-            retry-delay: 5s
-            retry-all: false
+        steps:
+            - name: Check the deployed url service
+              uses: jtalk/url-health-check-action@v3
+              with:
+                  url: https://heroku-pokedex-app.herokuapp.com
+                  max-atempts: 3
+                  retry-delay: 5s
+                  retry-all: false
