--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -13,6 +13,6 @@ jobs:
               uses: jtalk/url-health-check-action@v3
               with:
                   url: https://heroku-pokedex-app.herokuapp.com
-                  max-atempts: 3
+                  max-attempts: 3
                   retry-delay: 5s
                   retry-all: false
